fix: z-index implemented in the navigation bar

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -72,6 +72,8 @@ li {
   box-sizing: content-box;
   margin-top: 70px;
   padding: 20px 0;
+  z-index: 1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
 }
 
 .locations:hover .popover,
